Close a file descriptor leak in an error case.

PR:		138374
Submitted by:	Patroklos Argyroudis <argp@census-labs.com>
MFC after:	1 week

Former-commit-id: bd97382e9b28710a2c26ada55c32feb9e9a41d8d